refactored base.html to html5 standard

--- a/templates/GenespotRE/about.html
+++ b/templates/GenespotRE/about.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %}
 
+{% block title %}
+    ISB-CGC|About
+{% endblock %}
+
+{% block description %}
+    About ISB-CGC
+{% endblock %}
+
 {% block content %}
     <h1>This is a about page</h1>
 {% endblock %}
