adapted cohorts/ to user_landing/ view, created full nav with dummy html tags

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,8 +9,18 @@
 @import url("/static/css/font-awesome.min.css")
 @import url("/static/css/jquery-ui.min.css")
 
+// ----------------------------------
+// Import basic settings
+// ----------------------------------
 @import mixins
 @import variables
+
+// ----------------------------------
+// import Bootstrap
+// ----------------------------------
+@import "custom_bs"
+//@import url("/bootstrap/_bootstrap.scss")
+
 @import basic
 @import home
 @import search
