--- a/sass/variables.sass
+++ b/sass/variables.sass
@@ -1,3 +1,6 @@
+// --------------------------------------------
+// Variables from ISB
+// --------------------------------------------
 /********************************************
  * Style Variables
  *******************************************/
@@ -38,3 +41,18 @@ $text-shadow: 1px 1px 1px rgb(216, 216, 216)
 
 $box-shadow: 0px 1px 2px $border-color
 $border: 1px solid $border-color
+
+// --------------------------------------------
+// Custom variables for ISB-cgc project
+// Typography
+// --------------------------------------------
+$font_size: 14
+$h1_size: 36
+$h2_size: 24
+$h3_size: 18
+$h4_size: 16
+$h5_size: 14
+$h6_size: 12
+$small_size: 12
+
+$default_font_family: 'Proxima Nova-Regular', Arial, sans-serif
