added gulpfile to handle compiling sass and scss

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -5,7 +5,8 @@
  *******************************************/
 
 // Core stylesheets
-@import url("/static/css/bootstrap.min.css")
+//@import url("/static/css/bootstrap.min.css")
+@import url("/static/css/vendor.css")
 @import url("/static/css/font-awesome.min.css")
 @import url("/static/css/jquery-ui.min.css")
 
@@ -15,11 +16,9 @@
 @import mixins
 @import variables
 
-// ----------------------------------
-// import Bootstrap
-// ----------------------------------
-@import "custom_bs"
-//@import url("/bootstrap/_bootstrap.scss")
+// --------------------------------------------
+// Custom scss 
+// --------------------------------------------
 
 @import basic
 @import home
@@ -27,3 +26,4 @@
 @import cohorts
 @import visualizations
 @import users
+
